--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <h1>Hello! This is the App Component.</h1>
+      <p>App component p tag</p>
       <hr>
       <app-servers></app-servers>
     </div>
