Explore how the styles and styleUrls property works for a component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,10 @@
 h1 {
   color: darkblue;
+  background-color: blanchedalmond;
+}
+
+/* Rules only applies to the elements directly shown in the component
+NOT to any nested component */
+p {
+  font-weight: bold;
 }
