Explore different type of selectors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,12 @@
       <h1>Hello! This is the App Component.</h1>
       <p>App component p tag</p>
       <hr>
+      <!-- Use custom element/tag as selector: -->
       <app-servers></app-servers>
+      <!-- Use attribute as selector: -->
+      <!-- <div app-servers></div> -->
+      <!-- Use class name as selector: -->
+      <!-- <div class="app-servers"></div> -->
     </div>
   </div>
 </div>
