--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<p>{{ "Server" }} with ID {{ serverId }} is {{ getServerStatus()}} </p>
+<!-- attribute directives - not add or remove elements, only change -->
+<!-- Using property binding on an attribute directive here -->
+<p [ngStyle]="{'background-color': getColor()}">{{ "Server" }} with ID {{ serverId }} is {{ getServerStatus()}} </p>
