--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,3 +1,7 @@
 <!-- attribute directives - not add or remove elements, only change -->
 <!-- Using property binding on an attribute directive here -->
-<p [ngStyle]="{'background-color': getColor()}">{{ "Server" }} with ID {{ serverId }} is {{ getServerStatus()}} </p>
+<p
+  [ngStyle]="{ 'background-color': getColor() }"
+  [ngClass]="{ offline: serverStatus === 'offline' }"
+>
+  {{ "Server" }} with ID {{ serverId }} is {{ getServerStatus()}} </p>
