--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -36,5 +36,4 @@
     <p>No Server was created!</p>
   </ng-template> -->
 
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
