--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <app-add-server></app-add-server>
+  <app-add-server
+    (serverAdded)="onServerAdded($event)"
+    (blueprintAdded)="onBlueprintAdded($event)"
+  ></app-add-server>
   <hr />
   <div class="row">
     <div class="col-xs-12">
