Add example of output alias

--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-add-server
     (serverAdded)="onServerAdded($event)"
-    (blueprintAdded)="onBlueprintAdded($event)"
+    (bpCreated)="onBlueprintAdded($event)"
   ></app-add-server>
   <hr />
   <div class="row">
