--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -6,9 +6,16 @@
   <hr />
   <div class="row">
     <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeName()">
+        Change the name of the first server element
+      </button>
+      <button class="btn btn-danger" (click)="onDestoryFirst()">
+        Destroy First Element
+      </button>
       <app-server-element
         *ngFor="let serverElement of serverElements"
         [srvElement]="serverElement"
+        [name]="serverElement.name"
       >
         <p>
           <strong *ngIf="serverElement.type === 'server'" style="color: red">{{
