--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -9,7 +9,7 @@
       <button class="btn btn-primary" (click)="onChangeName()">
         Change the name of the first server element
       </button>
-      <button class="btn btn-danger" (click)="onDestoryFirst()">
+      <button class="btn btn-danger" (click)="onDestroyFirst()">
         Destroy First Element
       </button>
       <app-server-element
