--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -8,12 +8,26 @@
       <ul class="list-group">
         <!-- Each element can only have one structural directive -->
         <div *ngIf="onlyOdd">
-          <li class="list-group-item" *ngFor="let odd of oddNumbers">
+          <li
+            class="list-group-item"
+            *ngFor="let odd of oddNumbers"
+            [ngClass]="{ odd: odd % 2 !== 0 }"
+            [ngStyle]="{
+              backgroundColor: odd % 2 !== 0 ? 'black' : 'lavender'
+            }"
+          >
             {{ odd }}
           </li>
         </div>
         <div *ngIf="!onlyOdd">
-          <li class="list-group-item" *ngFor="let even of evenNumbers">
+          <li
+            class="list-group-item"
+            *ngFor="let even of evenNumbers"
+            [ngClass]="{ odd: even % 2 !== 0 }"
+            [ngStyle]="{
+              backgroundColor: even % 2 !== 0 ? 'black' : 'lavender'
+            }"
+          >
             {{ even }}
           </li>
         </div>
