Add example of a custom attribute directive

--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -35,6 +35,7 @@
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
+      <p appBasicHighlight>Styled with Basic Highlight</p>
     </div>
   </div>
 </div>
