Add example of using renderer to access DOM and create directive

--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -36,6 +36,7 @@
         <p>Only odd</p>
       </ng-template>
       <p appBasicHighlight>Styled with Basic Highlight</p>
+      <p appBetterHighlight>Styled with Better Highlight directive</p>
     </div>
   </div>
 </div>
