--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -36,11 +36,7 @@
         <p>Only odd</p>
       </ng-template>
       <p appBasicHighlight>Styled with Basic Highlight</p>
-      <p
-        appBetterHighlight
-        [defaultColor]="'darkorange'"
-        [highlightColor]="'yellowgreen'"
-      >
+      <p [appBetterHighlight]="'yellowgreen'" [defaultColor]="'darkorange'">
         Styled with Better Highlight directive
       </p>
     </div>
