Add example of string type directive property binding shorthand

--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -36,7 +36,7 @@
         <p>Only odd</p>
       </ng-template>
       <p appBasicHighlight>Styled with Basic Highlight</p>
-      <p [appBetterHighlight]="'yellowgreen'" [defaultColor]="'darkorange'">
+      <p [appBetterHighlight]="'yellowgreen'" defaultColor="darkorange">
         Styled with Better Highlight directive
       </p>
     </div>
