Add extra note about directive property binding

--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -39,6 +39,7 @@
       <!-- directive selector: appBetterHightlight, directive property alias: same as director selector -->
       <!-- directive property binding shorthand 1: add [] to directive selector = alias -->
       <!-- directive property binding shorthand 2: for property type: string, omit [] around property and omit '' around string -->
+      <!-- Be careful not to use property name same as actual element attribute which is confusing to others-->
       <p [appBetterHighlight]="'yellowgreen'" defaultColor="darkorange">
         Styled with Better Highlight directive
       </p>
