--- a/directives-start/src/app/app.component.html
+++ b/directives-start/src/app/app.component.html
@@ -31,6 +31,21 @@
             {{ even }}
           </li>
         </div>
+        <ng-template [ngIf]="!onlyOdd">
+          <p>Full ng-template syntax</p>
+          <div>
+            <li
+              class="list-group-item"
+              *ngFor="let even of evenNumbers"
+              [ngClass]="{ odd: even % 2 !== 0 }"
+              [ngStyle]="{
+                backgroundColor: even % 2 !== 0 ? 'black' : 'lavender'
+              }"
+            >
+              {{ even }}
+            </li>
+          </div>
+        </ng-template>
       </ul>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
