--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -13,11 +13,12 @@
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <button type="button" class="btn btn-primary" (click)="onReloadServers()">
+    <router-outlet></router-outlet>
+    <!-- <button type="button" class="btn btn-primary" (click)="onReloadServers()">
       Reload Server
     </button>
     <app-edit-server></app-edit-server>
-    <hr />
+    <hr /> -->
     <!-- <app-server></app-server> -->
   </div>
 </div>
