--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -12,6 +12,7 @@
               type="text"
               id="username"
               class="form-control"
+              required
             />
           </div>
           <button class="btn btn-default" type="button">
@@ -25,6 +26,8 @@
               type="email"
               id="email"
               class="form-control"
+              required
+              email
             />
           </div>
         </div>
