--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -47,6 +47,16 @@
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
+        <div class="form-group">
+          <textarea
+            name="questionAnswer"
+            id="questionAnswer"
+            class="form-control"
+            rows="3"
+            [(ngModel)]="answer"
+          ></textarea>
+          <p>Your reply: {{ answer }}</p>
+        </div>
         <button class="btn btn-primary" type="submit" [disabled]="!form.valid">
           Submit
         </button>
