--- a/pipes-start/src/app/app.component.html
+++ b/pipes-start/src/app/app.component.html
@@ -12,7 +12,8 @@
           </span>
           <strong>{{ server.name }}</strong> |
           {{ server.instanceType | uppercase }} |
-          {{ server.started | date: 'fullDate' }}
+          {{ server.started | date: 'fullDate' | uppercase }}
+          <!-- Pipes are parsed left to right - the order matters -->
         </li>
       </ul>
     </div>
