--- a/pipes-start/src/app/app.component.html
+++ b/pipes-start/src/app/app.component.html
@@ -8,6 +8,8 @@
         Add Testing Server
       </button>
       <hr />
+      <h2>App Status: {{ appStatus | async }}</h2>
+      <hr />
       <ul class="list-group">
         <li
           class="list-group-item"
