Add example of error handling using Subject

--- a/http-01-start/src/app/app.component.html
+++ b/http-01-start/src/app/app.component.html
@@ -58,10 +58,10 @@
           <p>{{ post.content }}</p>
         </li>
       </ul>
-      <p *ngIf="fetching && !error">Loading...</p>
-      <div class="alert alert-danger" *ngIf="error">
+      <p *ngIf="fetching && !errorMessage">Loading...</p>
+      <div class="alert alert-danger" *ngIf="errorMessage">
         <h3>An error occurred</h3>
-        <p>{{ error.message }}</p>
+        <p>{{ errorMessage }}</p>
       </div>
     </div>
   </div>
